tests/codegen/fail/scalar/derive_input/attr_transparent_unit_struct.rs
use coasys_juniper::graphql_scalar;

#[graphql_scalar(transparent)]
struct ScalarSpecifiedByUrl;

fn main() {}
